--- a/titanic.ipynb
+++ b/titanic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 115,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 65,
    "metadata": {
     "scrolled": true,
     "tags": []
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
        "(891, 10)"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,19 +452,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.pipeline import Pipeline\n",
     "cleanup_pipeline = Pipeline([('age_handle_null',AgeCleanup()),\n",
     "                             ('cabin_cleanup',CabinCleanup())])\n",
-    "raw_train = cleanup_pipeline.fit_transform(raw_train)"
+    "raw_train = cleanup_pipeline.fit_transform(raw_train)\n",
+    "raw_test = cleanup_pipeline.fit_transform(raw_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Basic cleanup"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +483,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_test.drop(columns=['PassengerId','Ticket'], inplace=True)\n",
+    "#raw_train.dropna(subset=['Embarked'], inplace=True)\n",
+    "raw_test.drop(columns='Name', inplace=True)\n",
+    "raw_test['Cabin'] = raw_test['Cabin'].str[:1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "label_encoder = LabelEncoder()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Encoding(BaseEstimator, TransformerMixin):\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "    def fit(self, X, y=None):\n",
+    "        return self\n",
+    "    def transform(self, X, y=None):\n",
+    "        X['Sex'] = X['Sex'].replace({'male':0, 'female':1})\n",
+    "        X['Cabin'] = label_encoder.fit_transform(X['Cabin'])\n",
+    "        X.join(pd.get_dummies(X['Embarked'], drop_first=True))\n",
+    "        X.drop(columns = 'Embarked', inplace=True)\n",
+    "        \n",
+    "        return X\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "encoding_pipeline = Pipeline([('encoding',Encoding())])\n",
+    "raw_train = encoding_pipeline.fit_transform(raw_train)\n",
+    "raw_test = encoding_pipeline.fit_transform(raw_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +569,6 @@
        "      <th>Parch</th>\n",
        "      <th>Fare</th>\n",
        "      <th>Cabin</th>\n",
-       "      <th>Embarked</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -515,76 +576,71 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>3</td>\n",
-       "      <td>male</td>\n",
+       "      <td>0</td>\n",
        "      <td>22.0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>7.2500</td>\n",
-       "      <td>F</td>\n",
-       "      <td>S</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>female</td>\n",
+       "      <td>1</td>\n",
        "      <td>38.0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>71.2833</td>\n",
-       "      <td>C</td>\n",
-       "      <td>C</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
-       "      <td>female</td>\n",
+       "      <td>1</td>\n",
        "      <td>26.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>7.9250</td>\n",
-       "      <td>F</td>\n",
-       "      <td>S</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>female</td>\n",
+       "      <td>1</td>\n",
        "      <td>35.0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>53.1000</td>\n",
-       "      <td>C</td>\n",
-       "      <td>S</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>0</td>\n",
        "      <td>3</td>\n",
-       "      <td>male</td>\n",
+       "      <td>0</td>\n",
        "      <td>35.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>8.0500</td>\n",
-       "      <td>G</td>\n",
-       "      <td>S</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Survived  Pclass     Sex   Age  SibSp  Parch     Fare Cabin Embarked\n",
-       "0         0       3    male  22.0      1      0   7.2500     F        S\n",
-       "1         1       1  female  38.0      1      0  71.2833     C        C\n",
-       "2         1       3  female  26.0      0      0   7.9250     F        S\n",
-       "3         1       1  female  35.0      1      0  53.1000     C        S\n",
-       "4         0       3    male  35.0      0      0   8.0500     G        S"
+       "   Survived  Pclass  Sex   Age  SibSp  Parch     Fare  Cabin\n",
+       "0         0       3    0  22.0      1      0   7.2500      6\n",
+       "1         1       1    1  38.0      1      0  71.2833      2\n",
+       "2         1       3    1  26.0      0      0   7.9250      6\n",
+       "3         1       1    1  35.0      1      0  53.1000      2\n",
+       "4         0       3    0  35.0      0      0   8.0500      5"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -619,111 +675,80 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>PassengerId</th>\n",
        "      <th>Pclass</th>\n",
-       "      <th>Name</th>\n",
        "      <th>Sex</th>\n",
        "      <th>Age</th>\n",
        "      <th>SibSp</th>\n",
        "      <th>Parch</th>\n",
-       "      <th>Ticket</th>\n",
        "      <th>Fare</th>\n",
        "      <th>Cabin</th>\n",
-       "      <th>Embarked</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>892</td>\n",
        "      <td>3</td>\n",
-       "      <td>Kelly, Mr. James</td>\n",
-       "      <td>male</td>\n",
+       "      <td>0</td>\n",
        "      <td>34.5</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>330911</td>\n",
        "      <td>7.8292</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Q</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>893</td>\n",
        "      <td>3</td>\n",
-       "      <td>Wilkes, Mrs. James (Ellen Needs)</td>\n",
-       "      <td>female</td>\n",
+       "      <td>1</td>\n",
        "      <td>47.0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>363272</td>\n",
        "      <td>7.0000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>894</td>\n",
        "      <td>2</td>\n",
-       "      <td>Myles, Mr. Thomas Francis</td>\n",
-       "      <td>male</td>\n",
+       "      <td>0</td>\n",
        "      <td>62.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>240276</td>\n",
        "      <td>9.6875</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Q</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>895</td>\n",
        "      <td>3</td>\n",
-       "      <td>Wirz, Mr. Albert</td>\n",
-       "      <td>male</td>\n",
+       "      <td>0</td>\n",
        "      <td>27.0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>315154</td>\n",
        "      <td>8.6625</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>896</td>\n",
        "      <td>3</td>\n",
-       "      <td>Hirvonen, Mrs. Alexander (Helga E Lindqvist)</td>\n",
-       "      <td>female</td>\n",
+       "      <td>1</td>\n",
        "      <td>22.0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>3101298</td>\n",
        "      <td>12.2875</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   PassengerId  Pclass                                          Name     Sex  \\\n",
-       "0          892       3                              Kelly, Mr. James    male   \n",
-       "1          893       3              Wilkes, Mrs. James (Ellen Needs)  female   \n",
-       "2          894       2                     Myles, Mr. Thomas Francis    male   \n",
-       "3          895       3                              Wirz, Mr. Albert    male   \n",
-       "4          896       3  Hirvonen, Mrs. Alexander (Helga E Lindqvist)  female   \n",
-       "\n",
-       "    Age  SibSp  Parch   Ticket     Fare Cabin Embarked  \n",
-       "0  34.5      0      0   330911   7.8292   NaN        Q  \n",
-       "1  47.0      1      0   363272   7.0000   NaN        S  \n",
-       "2  62.0      0      0   240276   9.6875   NaN        Q  \n",
-       "3  27.0      0      0   315154   8.6625   NaN        S  \n",
-       "4  22.0      1      1  3101298  12.2875   NaN        S  "
+       "   Pclass  Sex   Age  SibSp  Parch     Fare  Cabin\n",
+       "0       3    0  34.5      0      0   7.8292      5\n",
+       "1       3    1  47.0      1      0   7.0000      5\n",
+       "2       2    0  62.0      0      0   9.6875      5\n",
+       "3       3    0  27.0      0      0   8.6625      6\n",
+       "4       3    1  22.0      1      1  12.2875      5"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -734,188 +759,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw_test = cleanup_pipeline.fit_transform(raw_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 129,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>PassengerId</th>\n",
-       "      <th>Pclass</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Sex</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>SibSp</th>\n",
-       "      <th>Parch</th>\n",
-       "      <th>Ticket</th>\n",
-       "      <th>Fare</th>\n",
-       "      <th>Cabin</th>\n",
-       "      <th>Embarked</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>892</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Kelly, Mr. James</td>\n",
-       "      <td>male</td>\n",
-       "      <td>34.5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>330911</td>\n",
-       "      <td>7.8292</td>\n",
-       "      <td>F</td>\n",
-       "      <td>Q</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>893</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Wilkes, Mrs. James (Ellen Needs)</td>\n",
-       "      <td>female</td>\n",
-       "      <td>47.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>363272</td>\n",
-       "      <td>7.0000</td>\n",
-       "      <td>F</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>894</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Myles, Mr. Thomas Francis</td>\n",
-       "      <td>male</td>\n",
-       "      <td>62.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>240276</td>\n",
-       "      <td>9.6875</td>\n",
-       "      <td>F</td>\n",
-       "      <td>Q</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>895</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Wirz, Mr. Albert</td>\n",
-       "      <td>male</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>315154</td>\n",
-       "      <td>8.6625</td>\n",
-       "      <td>F</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>896</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Hirvonen, Mrs. Alexander (Helga E Lindqvist)</td>\n",
-       "      <td>female</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3101298</td>\n",
-       "      <td>12.2875</td>\n",
-       "      <td>F</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   PassengerId  Pclass                                          Name     Sex  \\\n",
-       "0          892       3                              Kelly, Mr. James    male   \n",
-       "1          893       3              Wilkes, Mrs. James (Ellen Needs)  female   \n",
-       "2          894       2                     Myles, Mr. Thomas Francis    male   \n",
-       "3          895       3                              Wirz, Mr. Albert    male   \n",
-       "4          896       3  Hirvonen, Mrs. Alexander (Helga E Lindqvist)  female   \n",
-       "\n",
-       "    Age  SibSp  Parch   Ticket     Fare Cabin Embarked  \n",
-       "0  34.5      0      0   330911   7.8292     F        Q  \n",
-       "1  47.0      1      0   363272   7.0000     F        S  \n",
-       "2  62.0      0      0   240276   9.6875     F        Q  \n",
-       "3  27.0      0      0   315154   8.6625     F        S  \n",
-       "4  22.0      1      1  3101298  12.2875     F        S  "
-      ]
-     },
-     "execution_count": 129,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "raw_test.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 130,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "raw_test.drop(columns=['PassengerId','Ticket'], inplace=True)\n",
-    "#raw_train.dropna(subset=['Embarked'], inplace=True)\n",
-    "raw_test.drop(columns='Name', inplace=True)\n",
-    "raw_test['Cabin'] = raw_test['Cabin'].str[:1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 131,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "raw_train.to_csv(os.path.join('data','train_processed.csv'), index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 132,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "raw_train.to_csv(os.path.join('data','train_processed.csv'), index=False)\n",
     "raw_test.to_csv(os.path.join('data','test_processed.csv'), index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
