--- a/titanic.ipynb
+++ b/titanic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,27 +25,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
     "raw_train_path = os.path.join('data','train.csv')\n",
-    "raw_train = pd.read_csv(raw_train_path)"
+    "raw_train = pd.read_csv(raw_train_path)\n",
+    "raw_train_og = raw_train.copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
     "raw_test_path = os.path.join('data','test.csv')\n",
-    "raw_test = pd.read_csv(raw_test_path)"
+    "raw_test = pd.read_csv(raw_test_path)\n",
+    "raw_test_og = raw_test.copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +188,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 116,
    "metadata": {
     "scrolled": true,
     "tags": []
@@ -235,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +274,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +294,7 @@
        "(891, 10)"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,16 +519,16 @@
     "    def transform(self, X, y=None):\n",
     "        X['Sex'] = X['Sex'].replace({'male':0, 'female':1})\n",
     "        X['Cabin'] = label_encoder.fit_transform(X['Cabin'])\n",
-    "        X.join(pd.get_dummies(X['Embarked'], drop_first=True))\n",
+    "        embarked_encoded = pd.get_dummies(X['Embarked'], drop_first=True)\n",
+    "        X = X.join(embarked_encoded)\n",
     "        X.drop(columns = 'Embarked', inplace=True)\n",
-    "        \n",
     "        return X\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -569,6 +571,8 @@
        "      <th>Parch</th>\n",
        "      <th>Fare</th>\n",
        "      <th>Cabin</th>\n",
+       "      <th>Q</th>\n",
+       "      <th>S</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -581,7 +585,9 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>7.2500</td>\n",
-       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -593,6 +599,8 @@
        "      <td>0</td>\n",
        "      <td>71.2833</td>\n",
        "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -604,6 +612,8 @@
        "      <td>0</td>\n",
        "      <td>7.9250</td>\n",
        "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -615,6 +625,8 @@
        "      <td>0</td>\n",
        "      <td>53.1000</td>\n",
        "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -625,22 +637,24 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>8.0500</td>\n",
-       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Survived  Pclass  Sex   Age  SibSp  Parch     Fare  Cabin\n",
-       "0         0       3    0  22.0      1      0   7.2500      6\n",
-       "1         1       1    1  38.0      1      0  71.2833      2\n",
-       "2         1       3    1  26.0      0      0   7.9250      6\n",
-       "3         1       1    1  35.0      1      0  53.1000      2\n",
-       "4         0       3    0  35.0      0      0   8.0500      5"
+       "   Survived  Pclass  Sex   Age  SibSp  Parch     Fare  Cabin  Q  S\n",
+       "0         0       3    0  22.0      1      0   7.2500      5  0  1\n",
+       "1         1       1    1  38.0      1      0  71.2833      2  0  0\n",
+       "2         1       3    1  26.0      0      0   7.9250      6  0  1\n",
+       "3         1       1    1  35.0      1      0  53.1000      2  0  1\n",
+       "4         0       3    0  35.0      0      0   8.0500      6  0  1"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -682,6 +696,8 @@
        "      <th>Parch</th>\n",
        "      <th>Fare</th>\n",
        "      <th>Cabin</th>\n",
+       "      <th>Q</th>\n",
+       "      <th>S</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -694,6 +710,8 @@
        "      <td>0</td>\n",
        "      <td>7.8292</td>\n",
        "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -704,6 +722,8 @@
        "      <td>0</td>\n",
        "      <td>7.0000</td>\n",
        "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -713,7 +733,9 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>9.6875</td>\n",
-       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -724,6 +746,8 @@
        "      <td>0</td>\n",
        "      <td>8.6625</td>\n",
        "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -733,22 +757,24 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>12.2875</td>\n",
-       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Pclass  Sex   Age  SibSp  Parch     Fare  Cabin\n",
-       "0       3    0  34.5      0      0   7.8292      5\n",
-       "1       3    1  47.0      1      0   7.0000      5\n",
-       "2       2    0  62.0      0      0   9.6875      5\n",
-       "3       3    0  27.0      0      0   8.6625      6\n",
-       "4       3    1  22.0      1      1  12.2875      5"
+       "   Pclass  Sex   Age  SibSp  Parch     Fare  Cabin  Q  S\n",
+       "0       3    0  34.5      0      0   7.8292      5  1  0\n",
+       "1       3    1  47.0      1      0   7.0000      5  0  1\n",
+       "2       2    0  62.0      0      0   9.6875      3  1  0\n",
+       "3       3    0  27.0      0      0   8.6625      6  0  1\n",
+       "4       3    1  22.0      1      1  12.2875      6  0  1"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -759,13 +785,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
     "raw_train.to_csv(os.path.join('data','train_processed.csv'), index=False)\n",
     "raw_test.to_csv(os.path.join('data','test_processed.csv'), index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
